--- a/profileapp/src/App.css
+++ b/profileapp/src/App.css
@@ -37,4 +37,75 @@
   }
 }
 
-/* this is where all of the other CSS will go  */
+/* All common elements */
+
+body {
+  background-image: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  /* background-size: cover;
+  height: 100%;
+  overflow: hidden; */
+  
+}
+
+/* trying to right-align these parts of the nav bar - NEEDS FIXING*/
+.collapse .navbar-collapse {
+  justify-content: right;
+}
+
+#footer {
+  margin-bottom: 0px;
+}
+
+/* index.html ONLY */
+
+.jumbotron {
+  margin: 50px;
+}
+
+.profilepic {
+  border-style: solid;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 5px;
+  padding: 0;
+}
+
+.display-4 {
+  font-size: 5vw;
+}
+
+.aboutme {
+  font-size: 3vmin;
+  text-align: justify;
+}
+
+#footer {
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.socialMedia {
+  font-size: 3vw;
+}
+
+.smLinks {
+  line-height: 1.75;
+}
+
+/* contact.html ONLY */
+
+.form-group {
+  font-size: 3vmin;
+}
+
+/* portfolio.html ONLY */
+
+.portPlaceholder {
+  margin: 15px;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.portfolio-card {
+  font-size: 1.5em;
+}
