--- a/profileapp/src/App.css
+++ b/profileapp/src/App.css
@@ -110,5 +110,8 @@ body {
   font-size: 1.5em;
 }
 
+.navbar {
+  background-color: #e3f2fd;
+}
 /* navbar: style="background-color: #e3f2fd" */
 /* footer color: style="background-color: #e3f2fd" */
