--- a/profileapp/src/App.css
+++ b/profileapp/src/App.css
@@ -41,6 +41,8 @@
 
 body {
   background-image: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  font-family: 'Raleway', sans-serif;
+
   /* background-size: cover;
   height: 100%;
   overflow: hidden; */
